typescript/checker/tests/conformance/es2017/useSharedArrayBuffer3.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            34,
        ),
        hi: BytePos(
            51,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es2017/useSharedArrayBuffer3.ts:3:16
  |
3 | var foge = new SharedArrayBuffer(1024);
  |                ^^^^^^^^^^^^^^^^^

